--- a/Portofolio Anniwarni/index.html
+++ b/Portofolio Anniwarni/index.html
@@ -129,7 +129,9 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="left-image">
+						    <a href="https://arni652.github.io/Kalkulator/">
                                                 <img src="img/kalkulator.png">
+						    </a>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
