--- a/Portofolio Anniwarni/index.html
+++ b/Portofolio Anniwarni/index.html
@@ -43,8 +43,8 @@
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home</em></a></li>
             <li><a href="#2"><i class="fa fa-support"></i> <em>Second</em></a></li>
             <li><a href="#3"><i class="fa fa-user"></i> <em>About</em></a></li>
-            <li><a href="#4"><i class="fa fa-pencil"></i> <em>Entries</em></a></li>
-            <li><a href="#6"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
+            <li><a href="#4"><i class="fa fa-pencil"></i> <em>Projek</em></a></li>
+            <li><a href="#6"><i class="fa fa-envelope"></i> <em>Projek</em></a></li>
             
           </ul>
         </nav>
