--- a/Portofolio Anniwarni/index.html
+++ b/Portofolio Anniwarni/index.html
@@ -44,7 +44,8 @@
             <li><a href="#2"><i class="fa fa-support"></i> <em>Second</em></a></li>
             <li><a href="#3"><i class="fa fa-user"></i> <em>About</em></a></li>
             <li><a href="#4"><i class="fa fa-pencil"></i> <em>Projek</em></a></li>
-            <li><a href="#6"><i class="fa fa-envelope"></i> <em>Projek</em></a></li>
+	    <li><a href="#5"><i class="fa fa-image"></i> <em>Projek</em></a></li>
+            <li><a href="#6"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
             
           </ul>
         </nav>
